# internal/dips/api/gen/di_ps/service.go
@@ -12,11 +12,10 @@ package dips
 import (
 	"context"
 
-	goa "goa.design/goa/v3/pkg"
 	"goa.design/goa/v3/security"
 )
 
-// Requests DIP creation and reports their details.
+// Requests DIP creation and reports DIP details.
 type Service interface {
 	// Request DIP creation for a document key.
 	Create(context.Context, *CreatePayload) (res *CreateDIPResult, err error)
@@ -93,6 +92,20 @@ type DocKey string
 // Object store key for the completed DIP.
 type ObjectKey string
 
+// RFC 9457 problem details object.
+type ProblemDetails struct {
+	// URI reference that identifies the problem type.
+	Type string
+	// Short, human-readable summary of the problem type.
+	Title string
+	// Human-readable explanation specific to this problem occurrence.
+	Detail string
+	// HTTP status code generated by the origin server.
+	Status int
+	// URI reference that identifies this problem occurrence.
+	Instance *string
+}
+
 // ShowPayload is the payload type of the DIPs service show method.
 type ShowPayload struct {
 	// OIDC bearer token.
@@ -101,22 +114,19 @@ type ShowPayload struct {
 	ID DIPID
 }
 
-// MakeUnauthorized builds a goa.ServiceError from an error.
-func MakeUnauthorized(err error) *goa.ServiceError {
-	return goa.NewServiceError(err, "unauthorized", false, false, false)
+// Error returns an error description.
+func (e *ProblemDetails) Error() string {
+	return "RFC 9457 problem details object."
 }
 
-// MakeInternalError builds a goa.ServiceError from an error.
-func MakeInternalError(err error) *goa.ServiceError {
-	return goa.NewServiceError(err, "internal_error", false, false, true)
+// ErrorName returns the error name.
+//
+// Deprecated: Use GoaErrorName - https://github.com/goadesign/goa/issues/3105
+func (e *ProblemDetails) ErrorName() string {
+	return e.GoaErrorName()
 }
 
-// MakeNotValid builds a goa.ServiceError from an error.
-func MakeNotValid(err error) *goa.ServiceError {
-	return goa.NewServiceError(err, "not_valid", false, false, false)
-}
-
-// MakeNotFound builds a goa.ServiceError from an error.
-func MakeNotFound(err error) *goa.ServiceError {
-	return goa.NewServiceError(err, "not_found", false, false, false)
+// GoaErrorName returns the error name.
+func (e *ProblemDetails) GoaErrorName() string {
+	return e.Type
 }
